  where it used to be 35 clicks.  Part of #998

--Editor Object pickers now allow you to search for field<=>value, like MapP>0
  or person=1 or food>16.  Most of the fields and checkboxes from the Object
  editor are supported by name.  Part of #998

--Refactored Pickable.h code to use inItem instead of inObject to avoid
  confusion (because Objects are only one type of pickable).





Version 406   2023-December-23

--steamGateClient now handles uploading mods to Steam Workshop and
  downloading/installing subscribed mods.

--Whoops... EditorExportPage was allowing _ in export tag names.




Version 405   2023-December-15

--Fixed fprintf type warning found with old Mac compiler.

--Added missing DLLs for editor on Windows.




Version 404   2023-December-15

--Fixed so that BELL and HELL arrow labels are in English.txt translation file
  instead of hard-coded.

--Fixed loads of places in both client and server that would cause a crash if
  content data set wasn't sufficiently fleshed out (at least one person object,
  at least one natural object, at least one food object, etc.).  Now both
  client and server are stable regardless of state of content set.

--Fixed memory leak when objects folder contains object .txt files with
  duplicate IDs.  Previously they were overwritten in the id map without
  freeing the previous object.  Now, only the first object scanned is kept,
  and any additional ones are freed correctly.

--Game now supports loading mods from mods folder.

--Windows build scripts now include building editor.

--Public release of EditOneLife binary on Windows and Steam.




Editor Fixes:

--Fixed soundBank to roll back nextSoundNumber value whenever last sound in
  bank is deleted, to avoid sound id inflation.

--Fixed SoundWidget to uncount live use of old sound before saving new sound
  when recording over a sound.  This further reduces sound id inflation.  Now,
  if you record a bunch of sounds, with multiple overwriting takes for each